--- a/boot-05-web-admin/src/main/resources/application.yml
+++ b/boot-05-web-admin/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/ssmbuild
     username: root
-    password: root
+    password: 12345678
     driver-class-name: com.mysql.jdbc.Driver
 
    # http://localhost:8080/druid/login.html  德鲁伊的界面
